--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hastscript": "^9.0.0",
     "katex": "^0.16.19",
     "markdown-it": "^14.1.0",
+    "markdown-it-toc": "^1.1.0",
     "mdast-util-to-string": "^4.0.0",
     "overlayscrollbars": "^2.10.1",
     "pagefind": "^1.2.0",
